<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:contentDescription="@string/logo_desc"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="100dp"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="14dp"
                android:textColor="@color/gray_8080"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray_8080"
                android:hint="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="14dp"
                android:padding="10dp"
                android:textColor="@color/gray_8080"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_8080"
                android:hint="@string/password"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="48dp"
            android:padding="12dp"
            android:background="@color/login_btn"
            android:textColor="@color/white"
            android:text="@string/login_text"/>

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="Log in with Facebook"
            android:id="@+id/login_button"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:text="Don't have an account? Create one"
            android:gravity="center"
            android:textSize="14dp"/>

    </LinearLayout>
</ScrollView>