<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.tudelft.xflash.gogogym.DashboardActivity"
    tools:showIn="@layout/app_bar_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@color/white">

                <net.tudelft.xflash.gogogym.GifImageView
                    android:id="@+id/GifImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_game"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/level"
                        android:textAlignment="textEnd"
                        android:layout_marginBottom="6dp"
                        android:padding="5dp"
                        android:textSize="@dimen/headline_text_size"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exp"
                        android:layout_weight="3"
                        android:gravity="right"
                        android:padding="5dp"
                        android:textColor="@color/bg_dashboard"/>

                    <ProgressBar
                        android:id="@+id/progressBarExp"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:max="100"
                        android:progress="10" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/energy"
                        android:layout_weight="3"
                        android:gravity="right"
                        android:padding="5dp"
                        android:textColor="@color/bg_dashboard"/>

                    <ProgressBar
                        android:id="@+id/progressBarEnergy"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:max="100"
                        android:progress="20" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/dashboard_tabhost"/>

    </LinearLayout>

</RelativeLayout>
